--- a/setup.cfg
+++ b/setup.cfg
@@ -51,9 +51,8 @@ install_requires =
     confection>=0.0.1,<1.0.0
     # Third-party dependencies
     setuptools
-    numpy>=1.19.0,<3.0.0; python_version < "3.9"
-    numpy>=1.19.0,<3.0.0; python_version >= "3.9"
-    pydantic>=1.7.4,!=1.8,!=1.8.1,<3.0.0
+    numpy>=2.0.0,<3.0.0
+    pydantic>=2.0.0,<3.0.0
     packaging>=20.0
     # Backports of modern Python features
     dataclasses>=0.6,<1.0; python_version < "3.7"
