--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,9 @@ website/_deploy.sh
 
 # Cython / C extensions
 cythonize.json
-*.cpp
-*.so
-*.so.1
+# *.cpp
+# *.so
+# *.so.1
 
 # Vim / VSCode / editors
 *.swp
